--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,16 @@
   </head>
   <body>
     <div class="container">
+      <h1>To-Do</h1>
       <div class="input-section">
         <input type="text" placeholder="Enter the Task" id="task" />
-        <button id="submit-btn">Add</button>
+        <button id="submit-btn">Add..</button>
       </div>
       <div class="task-wrapper">
         <div class="task-section">
           <h2>Tasks to-do</h2>
           <div id="task-box" class="task-box"></div>
-          <button id="remove-btn">Remove Completed Tasks</button>
+          <button id="remove-btn">Remove..</button>
         </div>
         <div class="completed-section">
           <h2>Completed Tasks</h2>
